--- a/assignment3.ipynb
+++ b/assignment3.ipynb
@@ -120,12 +120,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 128\n",
-    "\n",
+    "regularization = 1e-5\n",
     "graph = tf.Graph()\n",
     "with graph.as_default():\n",
     "\n",
@@ -145,8 +145,8 @@
     "  # Training computation.\n",
     "  logits = tf.matmul(tf_train_dataset, weights) + biases\n",
     "  loss = tf.reduce_mean(\n",
-    "    tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=logits)) + \\\n",
-    "         tf.nn.l2_loss(tf.norm(weights))\n",
+    "    tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=logits)) \n",
+    "  loss += regularization * tf.nn.l2_loss(weights)\n",
     "  # Optimizer.\n",
     "  optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss)\n",
     "  \n",
@@ -159,166 +159,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initialized\nMinibatch loss at step 0: 3072.318115\nMinibatch accuracy: 20.3%\n"
+      "Initialized\nMinibatch loss at step 0: 19.623400\nMinibatch accuracy: 8.6%\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation accuracy: 15.1%\n"
+      "Validation accuracy: 15.8%\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Minibatch loss at step 500: 2.273528\nMinibatch accuracy: 43.0%\nValidation accuracy: 48.0%\n"
+      "Minibatch loss at step 500: 1.651637\nMinibatch accuracy: 80.5%\nValidation accuracy: 75.7%\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Minibatch loss at step 1000: 2.550953\nMinibatch accuracy: 37.5%\nValidation accuracy: 47.4%\n"
+      "Minibatch loss at step 1000: 1.700577\nMinibatch accuracy: 68.8%\nValidation accuracy: 76.7%\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Minibatch loss at step 1500: 2.182162\nMinibatch accuracy: 53.9%\nValidation accuracy: 46.0%\n"
+      "Minibatch loss at step 1500: 0.882495\nMinibatch accuracy: 78.9%\nValidation accuracy: 77.6%\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Minibatch loss at step 2000: 2.000694\nMinibatch accuracy: 50.8%\nValidation accuracy: 44.6%\n"
+      "Minibatch loss at step 2000: 1.141826\nMinibatch accuracy: 76.6%\nValidation accuracy: 77.5%\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Minibatch loss at step 2500: 1.861214\nMinibatch accuracy: 67.2%\nValidation accuracy: 41.4%\n"
+      "Minibatch loss at step 2500: 1.198384\nMinibatch accuracy: 77.3%\nValidation accuracy: 78.4%\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Minibatch loss at step 3000: 2.145055\nMinibatch accuracy: 46.1%\nValidation accuracy: 38.4%\n"
+      "Minibatch loss at step 3000: 1.052035\nMinibatch accuracy: 78.9%\nValidation accuracy: 79.1%\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Minibatch loss at step 3500: 2.034441\nMinibatch accuracy: 60.9%\nValidation accuracy: 53.9%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minibatch loss at step 4000: 2.452129\nMinibatch accuracy: 51.6%\nValidation accuracy: 54.0%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minibatch loss at step 4500: 2.213572\nMinibatch accuracy: 52.3%\nValidation accuracy: 42.0%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minibatch loss at step 5000: 2.578850\nMinibatch accuracy: 39.1%\nValidation accuracy: 41.8%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minibatch loss at step 5500: 2.062583\nMinibatch accuracy: 53.1%\nValidation accuracy: 53.8%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minibatch loss at step 6000: 2.282279\nMinibatch accuracy: 39.1%\nValidation accuracy: 48.5%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minibatch loss at step 6500: 2.153857\nMinibatch accuracy: 41.4%\nValidation accuracy: 49.6%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minibatch loss at step 7000: 2.357007\nMinibatch accuracy: 35.2%\nValidation accuracy: 40.3%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minibatch loss at step 7500: 1.937504\nMinibatch accuracy: 60.2%\nValidation accuracy: 55.2%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minibatch loss at step 8000: 2.408006\nMinibatch accuracy: 52.3%\nValidation accuracy: 45.9%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minibatch loss at step 8500: 2.211872\nMinibatch accuracy: 50.0%\nValidation accuracy: 48.9%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minibatch loss at step 9000: 2.022515\nMinibatch accuracy: 54.7%\nValidation accuracy: 54.8%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minibatch loss at step 9500: 2.135462\nMinibatch accuracy: 47.7%\nValidation accuracy: 45.7%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minibatch loss at step 10000: 2.308667\nMinibatch accuracy: 44.5%\nValidation accuracy: 53.9%\nTest accuracy: 58.0%\n"
+      "Test accuracy: 85.1%\n"
      ]
     }
    ],
    "source": [
-    "num_steps = 10001\n",
+    "num_steps = 3001\n",
     "\n",
     "with tf.Session(graph=graph) as session:\n",
     "  tf.global_variables_initializer().run()\n",
