--- a/assignment3.ipynb
+++ b/assignment3.ipynb
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SGD with L2 Regularization"
+    "# SGD with L2 Regularization"
    ]
   },
   {
@@ -254,12 +254,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    ""
+    "# SGD with dropout"
    ]
   },
   {
