--- a/assignment4.ipynb
+++ b/assignment4.ipynb
@@ -55,20 +55,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "image_size = 28\n",
+    "num_labels = 10\n",
+    "num_channels = 1 # grayscale\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "def reformat(dataset, labels):\n",
+    "  dataset = dataset.reshape(\n",
+    "    (-1, image_size, image_size, num_channels)).astype(np.float32)\n",
+    "  labels = (np.arange(num_labels) == labels[:,None]).astype(np.float32)\n",
+    "  return dataset, labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set (200000, 28, 28, 1) (200000, 10)\nValidation set (10000, 28, 28, 1) (10000, 10)\nTest set (10000, 28, 28, 1) (10000, 10)\n"
+     ]
+    }
+   ],
    "source": [
-    ""
+    "train_dataset, train_labels = reformat(train_dataset, train_labels)\n",
+    "valid_dataset, valid_labels = reformat(valid_dataset, valid_labels)\n",
+    "test_dataset, test_labels = reformat(test_dataset, test_labels)\n",
+    "print('Training set', train_dataset.shape, train_labels.shape)\n",
+    "print('Validation set', valid_dataset.shape, valid_labels.shape)\n",
+    "print('Test set', test_dataset.shape, test_labels.shape)"
    ]
   },
   {
