--- a/assignment4.ipynb
+++ b/assignment4.ipynb
@@ -96,11 +96,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "def accuracy(predictions, labels):\n",
+    "  return (100.0 * np.sum(np.argmax(predictions, 1) == np.argmax(labels, 1))\n",
+    "          / predictions.shape[0])"
    ]
   },
   {
