--- a/assignment4.ipynb
+++ b/assignment4.ipynb
@@ -111,25 +111,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "#######################################################################################"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "batch_size = 16\n",
+    "patch_size = 5\n",
+    "depth = 16\n",
+    "num_hidden = 64"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "graph = tf.Graph()\n",
+    "\n",
+    "with graph.as_default():\n",
+    "    # Input data.\n",
+    "    tf_train_dataset = tf.placeholder(\n",
+    "        tf.float32, shape=(batch_size, image_size, image_size, num_channels))\n",
+    "    tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
+    "    tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "    tf_test_dataset = tf.constant(test_dataset)\n",
+    "    \n",
+    "    # Variables.\n",
+    "    layer1_weights = tf.Variable(tf.truncated_normal(\n",
+    "          [patch_size, patch_size, num_channels, depth], stddev=0.1))\n",
+    "    layer1_biases = tf.Variable(tf.zeros([depth]))\n",
+    "    layer2_weights = tf.Variable(tf.truncated_normal(\n",
+    "          [patch_size, patch_size, depth, depth], stddev=0.1))\n",
+    "    layer2_biases = tf.Variable(tf.constant(1.0, shape=[depth]))\n",
+    "    layer3_weights = tf.Variable(tf.truncated_normal(\n",
+    "          [image_size // 4 * image_size // 4 * depth, num_hidden], stddev=0.1))\n",
+    "    layer3_biases = tf.Variable(tf.constant(1.0, shape=[num_hidden]))\n",
+    "    layer4_weights = tf.Variable(tf.truncated_normal(\n",
+    "          [num_hidden, num_labels], stddev=0.1))\n",
+    "    layer4_biases = tf.Variable(tf.constant(1.0, shape=[num_labels]))\n",
+    "    \n",
+    "    # Model.\n",
+    "    def model(data):\n",
+    "        conv1 = tf.nn.conv2d(data, layer1_weights, [1, 2, 2, 1], padding='SAME')\n",
+    "        hidden = tf.nn.relu(conv1 + layer1_biases)\n",
+    "        conv2 = tf.nn.conv2d(hidden, layer2_weights, [1, 2, 2, 1], padding='SAME')\n",
+    "        hidden = tf.nn.relu(conv2 + layer2_biases)\n",
+    "        shape = hidden.get_shape().as_list()\n",
+    "        reshape = tf.reshape(hidden, [shape[0], shape[1] * shape[2] * shape[3]])\n",
+    "        hidden = tf.nn.relu(tf.matmul(reshape, layer3_weights) + layer3_biases)\n",
+    "        return tf.matmul(hidden, layer4_weights) + layer4_biases\n",
+    "    \n",
+    "    # Training computation.\n",
+    "    logits = model(tf_train_dataset)\n",
+    "    loss = tf.reduce_mean(\n",
+    "        tf.nn.softmax_cross_entropy_with_logits_v2(labels=tf_train_labels, logits=logits))\n",
+    "    \n",
+    "    # Optimizer.\n",
+    "    optimizer = tf.train.GradientDescentOptimizer(0.05).minimize(loss)\n",
+    "  \n",
+    "    # Predictions for the training, validation, and test data.\n",
+    "    train_prediction = tf.nn.softmax(logits)\n",
+    "    valid_prediction = tf.nn.softmax(model(tf_valid_dataset))\n",
+    "    test_prediction = tf.nn.softmax(model(tf_test_dataset))"
    ]
   },
   {
