--- a/assignment4.ipynb
+++ b/assignment4.ipynb
@@ -183,11 +183,331 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialized\nMinibatch loss at step 0: 2.455858\nMinibatch accuracy: 12.5%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 10.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 50: 1.286839\nMinibatch accuracy: 62.5%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 59.3%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 100: 0.919453\nMinibatch accuracy: 75.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 69.1%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 150: 0.619562\nMinibatch accuracy: 93.8%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 72.8%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 200: 0.411817\nMinibatch accuracy: 81.2%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 77.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 250: 1.059065\nMinibatch accuracy: 68.8%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 77.9%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 300: 0.531010\nMinibatch accuracy: 81.2%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 80.2%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 350: 0.306419\nMinibatch accuracy: 93.8%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 80.5%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 400: 0.432092\nMinibatch accuracy: 87.5%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 80.5%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 450: 1.064740\nMinibatch accuracy: 68.8%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 79.5%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 500: 1.372317\nMinibatch accuracy: 62.5%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 79.5%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 550: 0.320401\nMinibatch accuracy: 93.8%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 82.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 600: 0.788960\nMinibatch accuracy: 68.8%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 81.4%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 650: 0.312579\nMinibatch accuracy: 93.8%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 81.9%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 700: 0.750070\nMinibatch accuracy: 87.5%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 82.6%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 750: 0.777617\nMinibatch accuracy: 68.8%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 82.1%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 800: 0.496155\nMinibatch accuracy: 81.2%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 83.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 850: 0.687100\nMinibatch accuracy: 75.0%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 81.8%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 900: 0.366634\nMinibatch accuracy: 87.5%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 83.2%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 950: 0.866148\nMinibatch accuracy: 68.8%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 82.3%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minibatch loss at step 1000: 0.964471\nMinibatch accuracy: 68.8%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 82.8%\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 88.5%\n"
+     ]
+    }
+   ],
    "source": [
-    ""
+    "num_steps = 1001\n",
+    "\n",
+    "with tf.Session(graph=graph) as session:\n",
+    "    tf.global_variables_initializer().run()\n",
+    "    print('Initialized')\n",
+    "    for step in range(num_steps):\n",
+    "        offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "        batch_data = train_dataset[offset:(offset + batch_size), :, :, :]\n",
+    "        batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+    "        feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
+    "        _, l, predictions = session.run(\n",
+    "            [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
+    "        if (step % 50 == 0):\n",
+    "            print('Minibatch loss at step %d: %f' % (step, l))\n",
+    "            print('Minibatch accuracy: %.1f%%' % accuracy(predictions, batch_labels))\n",
+    "            print('Validation accuracy: %.1f%%' % accuracy(\n",
+    "                valid_prediction.eval(), valid_labels))\n",
+    "            \n",
+    "    print('Test accuracy: %.1f%%' % accuracy(test_prediction.eval(), test_labels))"
    ]
   },
   {
