download and read data

--- a/assignment5.ipynb
+++ b/assignment5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -25,20 +25,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found and verified text8.zip\n"
+     ]
+    }
+   ],
    "source": [
-    ""
+    "url = 'http://mattmahoney.net/dc/'\n",
+    "\n",
+    "# Download a file if not present, and make sure it's the right size.\"\"\"\n",
+    "def maybe_download(filename, expected_bytes):\n",
+    "    if not os.path.exists(filename):\n",
+    "        filename, _ = urlretrieve(url + filename, filename)\n",
+    "        statinfo = os.stat(filename)\n",
+    "    if statinfo.st_size == expected_bytes:\n",
+    "        print('Found and verified %s' % filename)\n",
+    "    else:\n",
+    "        print(statinfo.st_size)\n",
+    "        raise Exception(\n",
+    "            'Failed to verify ' + filename + '. Can you get to it with a browser?')\n",
+    "    return filename\n",
+    "\n",
+    "filename = maybe_download('text8.zip', 31344016)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data size 17005207\n"
+     ]
+    }
+   ],
    "source": [
-    ""
+    "def read_data(filename):\n",
+    "    with zipfile.ZipFile(filename) as f:\n",
+    "        data = tf.compat.as_str(f.read(f.namelist()[0])).split()\n",
+    "    return data\n",
+    "  \n",
+    "words = read_data(filename)\n",
+    "print('Data size %d' % len(words))"
    ]
   },
   {
