--- a/assignment5.ipynb
+++ b/assignment5.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ajinkyapuar/anaconda/envs/py35/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: compiletime version 3.6 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.5\n  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "from __future__ import print_function\n",
@@ -25,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,10 +48,12 @@
     "url = 'http://mattmahoney.net/dc/'\n",
     "\n",
     "# Download a file if not present, and make sure it's the right size.\"\"\"\n",
+    "\n",
+    "\n",
     "def maybe_download(filename, expected_bytes):\n",
     "    if not os.path.exists(filename):\n",
     "        filename, _ = urlretrieve(url + filename, filename)\n",
-    "        statinfo = os.stat(filename)\n",
+    "    statinfo = os.stat(filename)\n",
     "    if statinfo.st_size == expected_bytes:\n",
     "        print('Found and verified %s' % filename)\n",
     "    else:\n",
@@ -57,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,11 +90,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['anarchism', 'originated', 'as', 'a', 'term']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(words[0:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "#####################################################################"
    ]
   },
   {
