build dataset function

--- a/assignment5.ipynb
+++ b/assignment5.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ajinkyapuar/anaconda/envs/py35/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: compiletime version 3.6 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.5\n  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "from __future__ import print_function\n",
@@ -33,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +59,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_data(filename):\n",
+    "    with zipfile.ZipFile(filename) as f:\n",
+    "        data = tf.compat.as_str(f.read(f.namelist()[0])).split()\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -79,18 +83,13 @@
     }
    ],
    "source": [
-    "def read_data(filename):\n",
-    "    with zipfile.ZipFile(filename) as f:\n",
-    "        data = tf.compat.as_str(f.read(f.namelist()[0])).split()\n",
-    "    return data\n",
-    "  \n",
     "words = read_data(filename)\n",
     "print('Data size %d' % len(words))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -112,6 +111,64 @@
    "outputs": [],
    "source": [
     "#####################################################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocabulary_size = 50000\n",
+    "\n",
+    "\n",
+    "def build_dataset(words):\n",
+    "    count = [['UNK', -1]]\n",
+    "    count.extend(collections.Counter(words).most_common(vocabulary_size - 1))\n",
+    "    dictionary = dict()\n",
+    "    for word, _ in count:\n",
+    "        dictionary[word] = len(dictionary)\n",
+    "    data = list()\n",
+    "    unk_count = 0\n",
+    "    for word in words:\n",
+    "        if word in dictionary:\n",
+    "            index = dictionary[word]\n",
+    "        else:\n",
+    "            index = 0  # dictionary['UNK']\n",
+    "            unk_count = unk_count + 1\n",
+    "        data.append(index)\n",
+    "    count[0][1] = unk_count\n",
+    "    reverse_dictionary = dict(zip(dictionary.values(), dictionary.keys())) \n",
+    "    return data, count, dictionary, reverse_dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most common words (+UNK) [['UNK', 418391], ('the', 1061396), ('of', 593677), ('and', 416629), ('one', 411764)]\nSample data [5237, 3084, 12, 6, 195, 2, 3136, 46, 59, 156]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data, count, dictionary, reverse_dictionary = build_dataset(words)\n",
+    "print('Most common words (+UNK)', count[:5])\n",
+    "print('Sample data', data[:10])\n",
+    "# del words  # Hint to reduce memory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
    ]
   },
   {
