--- a/assignment5.ipynb
+++ b/assignment5.ipynb
@@ -164,11 +164,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data: ['anarchism', 'originated', 'as', 'a', 'term', 'of', 'abuse', 'first']\n\nwith num_skips = 2 and skip_window = 1:\n    batch: ['originated', 'originated', 'as', 'as', 'a', 'a', 'term', 'term']\n    labels: ['as', 'anarchism', 'a', 'originated', 'as', 'term', 'a', 'of']\n\nwith num_skips = 4 and skip_window = 2:\n    batch: ['as', 'as', 'as', 'as', 'a', 'a', 'a', 'a']\n    labels: ['a', 'term', 'anarchism', 'originated', 'originated', 'of', 'as', 'term']\n"
+     ]
+    }
+   ],
    "source": [
-    ""
+    "data_index = 0\n",
+    "\n",
+    "\n",
+    "def generate_batch(batch_size, num_skips, skip_window):\n",
+    "    global data_index\n",
+    "    assert batch_size % num_skips == 0\n",
+    "    assert num_skips <= 2 * skip_window\n",
+    "    batch = np.ndarray(shape=(batch_size), dtype=np.int32)\n",
+    "    labels = np.ndarray(shape=(batch_size, 1), dtype=np.int32)\n",
+    "    span = 2 * skip_window + 1 # [ skip_window target skip_window ]\n",
+    "    buffer = collections.deque(maxlen=span)\n",
+    "    for _ in range(span):\n",
+    "        buffer.append(data[data_index])\n",
+    "        data_index = (data_index + 1) % len(data)\n",
+    "    for i in range(batch_size // num_skips):\n",
+    "        target = skip_window  # target label at the center of the buffer\n",
+    "        targets_to_avoid = [ skip_window ]\n",
+    "        for j in range(num_skips):\n",
+    "            while target in targets_to_avoid:\n",
+    "                target = random.randint(0, span - 1)\n",
+    "            targets_to_avoid.append(target)\n",
+    "            batch[i * num_skips + j] = buffer[skip_window]\n",
+    "            labels[i * num_skips + j, 0] = buffer[target]\n",
+    "        buffer.append(data[data_index])\n",
+    "        data_index = (data_index + 1) % len(data)\n",
+    "    return batch, labels\n",
+    "\n",
+    "print('data:', [reverse_dictionary[di] for di in data[:8]])\n",
+    "\n",
+    "for num_skips, skip_window in [(2, 1), (4, 2)]:\n",
+    "    data_index = 0\n",
+    "    batch, labels = generate_batch(batch_size=8, num_skips=num_skips, skip_window=skip_window)\n",
+    "    print('\\nwith num_skips = %d and skip_window = %d:' % (num_skips, skip_window))\n",
+    "    print('    batch:', [reverse_dictionary[bi] for bi in batch])\n",
+    "    print('    labels:', [reverse_dictionary[li] for li in labels.reshape(8)])"
    ]
   },
   {
