--- a/assignment6.ipynb
+++ b/assignment6.ipynb
@@ -85,11 +85,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99999000 ons anarchists advocate social relations based upon voluntary as\n1000  anarchism originated as a term of abuse first used against earl\n"
+     ]
+    }
+   ],
    "source": [
-    ""
+    "valid_size = 1000\n",
+    "valid_text = text[:valid_size]\n",
+    "train_text = text[valid_size:]\n",
+    "train_size = len(train_text)\n",
+    "print(train_size, train_text[:64])\n",
+    "print(valid_size, valid_text[:64])"
    ]
   },
   {
