char2id & id2char functions

--- a/assignment6.ipynb
+++ b/assignment6.ipynb
@@ -107,20 +107,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "vocabulary_size = len(string.ascii_lowercase) + 1  # [a-z] + ' '\n",
+    "first_letter = ord(string.ascii_lowercase[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unexpected character: ï\n1 26 0 0\na z  \n"
+     ]
+    }
+   ],
    "source": [
-    ""
+    "def char2id(char):\n",
+    "    if char in string.ascii_lowercase:\n",
+    "        return ord(char) - first_letter + 1\n",
+    "    elif char == ' ':\n",
+    "        return 0\n",
+    "    else:\n",
+    "        print('Unexpected character: %s' % char)\n",
+    "        return 0\n",
+    " \n",
+    "  \n",
+    "def id2char(dictid):\n",
+    "    if dictid > 0:\n",
+    "        return chr(dictid + first_letter - 1)\n",
+    "    else:\n",
+    "        return ' '\n",
+    "\n",
+    "print(char2id('a'), char2id('z'), char2id(' '), char2id('ï'))\n",
+    "print(id2char(1), id2char(26), id2char(0))"
    ]
   },
   {
