--- a/assignment6.ipynb
+++ b/assignment6.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -155,25 +155,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "######################################################################################"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "batch_size=64\n",
+    "num_unrollings=10\n",
+    "\n",
+    "\n",
+    "class BatchGenerator(object):\n",
+    "  def __init__(self, text, batch_size, num_unrollings):\n",
+    "    self._text = text\n",
+    "    self._text_size = len(text)\n",
+    "    self._batch_size = batch_size\n",
+    "    self._num_unrollings = num_unrollings\n",
+    "    segment = self._text_size // batch_size\n",
+    "    self._cursor = [ offset * segment for offset in range(batch_size)]\n",
+    "    self._last_batch = self._next_batch()\n",
+    "  \n",
+    "  def _next_batch(self):\n",
+    "    \"\"\"Generate a single batch from the current cursor position in the data.\"\"\"\n",
+    "    batch = np.zeros(shape=(self._batch_size, vocabulary_size), dtype=np.float)\n",
+    "    for b in range(self._batch_size):\n",
+    "      batch[b, char2id(self._text[self._cursor[b]])] = 1.0\n",
+    "      self._cursor[b] = (self._cursor[b] + 1) % self._text_size\n",
+    "    return batch\n",
+    "  \n",
+    "  def next(self):\n",
+    "    \"\"\"Generate the next array of batches from the data. The array consists of\n",
+    "    the last batch of the previous array, followed by num_unrollings new ones.\n",
+    "    \"\"\"\n",
+    "    batches = [self._last_batch]\n",
+    "    for step in range(self._num_unrollings):\n",
+    "      batches.append(self._next_batch())\n",
+    "    self._last_batch = batches[-1]\n",
+    "    return batches\n",
+    "\n",
+    "def characters(probabilities):\n",
+    "  \"\"\"Turn a 1-hot encoding or a probability distribution over the possible\n",
+    "  characters back into its (most likely) character representation.\"\"\"\n",
+    "  return [id2char(c) for c in np.argmax(probabilities, 1)]\n",
+    "\n",
+    "def batches2string(batches):\n",
+    "  \"\"\"Convert a sequence of batches back into their (most likely) string\n",
+    "  representation.\"\"\"\n",
+    "  s = [''] * batches[0].shape[0]\n",
+    "  for b in batches:\n",
+    "    s = [''.join(x) for x in zip(s, characters(b))]\n",
+    "  return s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ons anarchi', 'when milita', 'lleria arch', ' abbeys and', 'married urr', 'hel and ric', 'y and litur', 'ay opened f', 'tion from t', 'migration t', 'new york ot', 'he boeing s', 'e listed wi', 'eber has pr', 'o be made t', 'yer who rec', 'ore signifi', 'a fierce cr', ' two six ei', 'aristotle s', 'ity can be ', ' and intrac', 'tion of the', 'dy to pass ', 'f certain d', 'at it will ', 'e convince ', 'ent told hi', 'ampaign and', 'rver side s', 'ious texts ', 'o capitaliz', 'a duplicate', 'gh ann es d', 'ine january', 'ross zero t', 'cal theorie', 'ast instanc', ' dimensiona', 'most holy m', 't s support', 'u is still ', 'e oscillati', 'o eight sub', 'of italy la', 's the tower', 'klahoma pre', 'erprise lin', 'ws becomes ', 'et in a naz', 'the fabian ', 'etchy to re', ' sharman ne', 'ised empero', 'ting in pol', 'd neo latin', 'th risky ri', 'encyclopedi', 'fense the a', 'duating fro', 'treet grid ', 'ations more', 'appeal of d', 'si have mad']\n['ists advoca', 'ary governm', 'hes nationa', 'd monasteri', 'raca prince', 'chard baer ', 'rgical lang', 'for passeng', 'the nationa', 'took place ', 'ther well k', 'seven six s', 'ith a gloss', 'robably bee', 'to recogniz', 'ceived the ', 'icant than ', 'ritic of th', 'ight in sig', 's uncaused ', ' lost as in', 'cellular ic', 'e size of t', ' him a stic', 'drugs confu', ' take to co', ' the priest', 'im to name ', 'd barred at', 'standard fo', ' such as es', 'ze on the g', 'e of the or', 'd hiver one', 'y eight mar', 'the lead ch', 'es classica', 'ce the non ', 'al analysis', 'mormons bel', 't or at lea', ' disagreed ', 'ing system ', 'btypes base', 'anguages th', 'r commissio', 'ess one nin', 'nux suse li', ' the first ', 'zi concentr', ' society ne', 'elatively s', 'etworks sha', 'or hirohito', 'litical ini', 'n most of t', 'iskerdoo ri', 'ic overview', 'air compone', 'om acnm acc', ' centerline', 'e than any ', 'devotional ', 'de such dev']\n[' a']\n['an']\n"
+     ]
+    }
+   ],
    "source": [
-    ""
+    "train_batches = BatchGenerator(train_text, batch_size, num_unrollings)\n",
+    "valid_batches = BatchGenerator(valid_text, 1, 1)\n",
+    "\n",
+    "print(batches2string(train_batches.next()))\n",
+    "print(batches2string(train_batches.next()))\n",
+    "print(batches2string(valid_batches.next()))\n",
+    "print(batches2string(valid_batches.next()))"
    ]
   },
   {
