--- a/assignment6.ipynb
+++ b/assignment6.ipynb
@@ -235,6 +235,152 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def logprob(predictions, labels):\n",
+    "  \"\"\"Log-probability of the true labels in a predicted batch.\"\"\"\n",
+    "  predictions[predictions < 1e-10] = 1e-10\n",
+    "  return np.sum(np.multiply(labels, -np.log(predictions))) / labels.shape[0]\n",
+    "\n",
+    "\n",
+    "def sample_distribution(distribution):\n",
+    "  \"\"\"Sample one element from a distribution assumed to be an array of normalized\n",
+    "  probabilities.\n",
+    "  \"\"\"\n",
+    "  r = random.uniform(0, 1)\n",
+    "  s = 0\n",
+    "  for i in range(len(distribution)):\n",
+    "    s += distribution[i]\n",
+    "    if s >= r:\n",
+    "      return i\n",
+    "  return len(distribution) - 1\n",
+    "\n",
+    "\n",
+    "def sample(prediction):\n",
+    "  \"\"\"Turn a (column) prediction into 1-hot encoded samples.\"\"\"\n",
+    "  p = np.zeros(shape=[1, vocabulary_size], dtype=np.float)\n",
+    "  p[0, sample_distribution(prediction[0])] = 1.0\n",
+    "  return p\n",
+    "\n",
+    "\n",
+    "def random_distribution():\n",
+    "  \"\"\"Generate a random column of probabilities.\"\"\"\n",
+    "  b = np.random.uniform(0.0, 1.0, size=[1, vocabulary_size])\n",
+    "  return b/np.sum(b, 1)[:,None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_nodes = 64\n",
+    "\n",
+    "graph = tf.Graph()\n",
+    "with graph.as_default():\n",
+    "  \n",
+    "  # Parameters:\n",
+    "  # Input gate: input, previous output, and bias.\n",
+    "  ix = tf.Variable(tf.truncated_normal([vocabulary_size, num_nodes], -0.1, 0.1))\n",
+    "  im = tf.Variable(tf.truncated_normal([num_nodes, num_nodes], -0.1, 0.1))\n",
+    "  ib = tf.Variable(tf.zeros([1, num_nodes]))\n",
+    "  # Forget gate: input, previous output, and bias.\n",
+    "  fx = tf.Variable(tf.truncated_normal([vocabulary_size, num_nodes], -0.1, 0.1))\n",
+    "  fm = tf.Variable(tf.truncated_normal([num_nodes, num_nodes], -0.1, 0.1))\n",
+    "  fb = tf.Variable(tf.zeros([1, num_nodes]))\n",
+    "  # Memory cell: input, state and bias.                             \n",
+    "  cx = tf.Variable(tf.truncated_normal([vocabulary_size, num_nodes], -0.1, 0.1))\n",
+    "  cm = tf.Variable(tf.truncated_normal([num_nodes, num_nodes], -0.1, 0.1))\n",
+    "  cb = tf.Variable(tf.zeros([1, num_nodes]))\n",
+    "  # Output gate: input, previous output, and bias.\n",
+    "  ox = tf.Variable(tf.truncated_normal([vocabulary_size, num_nodes], -0.1, 0.1))\n",
+    "  om = tf.Variable(tf.truncated_normal([num_nodes, num_nodes], -0.1, 0.1))\n",
+    "  ob = tf.Variable(tf.zeros([1, num_nodes]))\n",
+    "  # Variables saving state across unrollings.\n",
+    "  saved_output = tf.Variable(tf.zeros([batch_size, num_nodes]), trainable=False)\n",
+    "  saved_state = tf.Variable(tf.zeros([batch_size, num_nodes]), trainable=False)\n",
+    "  # Classifier weights and biases.\n",
+    "  w = tf.Variable(tf.truncated_normal([num_nodes, vocabulary_size], -0.1, 0.1))\n",
+    "  b = tf.Variable(tf.zeros([vocabulary_size]))\n",
+    "  \n",
+    "  # Definition of the cell computation.\n",
+    "  def lstm_cell(i, o, state):\n",
+    "    \"\"\"Create a LSTM cell. See e.g.: http://arxiv.org/pdf/1402.1128v1.pdf\n",
+    "    Note that in this formulation, we omit the various connections between the\n",
+    "    previous state and the gates.\"\"\"\n",
+    "    input_gate = tf.sigmoid(tf.matmul(i, ix) + tf.matmul(o, im) + ib)\n",
+    "    forget_gate = tf.sigmoid(tf.matmul(i, fx) + tf.matmul(o, fm) + fb)\n",
+    "    update = tf.matmul(i, cx) + tf.matmul(o, cm) + cb\n",
+    "    state = forget_gate * state + input_gate * tf.tanh(update)\n",
+    "    output_gate = tf.sigmoid(tf.matmul(i, ox) + tf.matmul(o, om) + ob)\n",
+    "    return output_gate * tf.tanh(state), state\n",
+    "\n",
+    "  # Input data.\n",
+    "  train_data = list()\n",
+    "  for _ in range(num_unrollings + 1):\n",
+    "    train_data.append(\n",
+    "      tf.placeholder(tf.float32, shape=[batch_size,vocabulary_size]))\n",
+    "  train_inputs = train_data[:num_unrollings]\n",
+    "  train_labels = train_data[1:]  # labels are inputs shifted by one time step.\n",
+    "\n",
+    "  # Unrolled LSTM loop.\n",
+    "  outputs = list()\n",
+    "  output = saved_output\n",
+    "  state = saved_state\n",
+    "  for i in train_inputs:\n",
+    "    output, state = lstm_cell(i, output, state)\n",
+    "    outputs.append(output)\n",
+    "\n",
+    "  # State saving across unrollings.\n",
+    "  with tf.control_dependencies([saved_output.assign(output),\n",
+    "                                saved_state.assign(state)]):\n",
+    "    # Classifier.\n",
+    "    logits = tf.nn.xw_plus_b(tf.concat(outputs, 0), w, b)\n",
+    "    loss = tf.reduce_mean(\n",
+    "      tf.nn.softmax_cross_entropy_with_logits(\n",
+    "        labels=tf.concat(train_labels, 0), logits=logits))\n",
+    "\n",
+    "  # Optimizer.\n",
+    "  global_step = tf.Variable(0)\n",
+    "  learning_rate = tf.train.exponential_decay(\n",
+    "    10.0, global_step, 5000, 0.1, staircase=True)\n",
+    "  optimizer = tf.train.GradientDescentOptimizer(learning_rate)\n",
+    "  gradients, v = zip(*optimizer.compute_gradients(loss))\n",
+    "  gradients, _ = tf.clip_by_global_norm(gradients, 1.25)\n",
+    "  optimizer = optimizer.apply_gradients(\n",
+    "    zip(gradients, v), global_step=global_step)\n",
+    "\n",
+    "  # Predictions.\n",
+    "  train_prediction = tf.nn.softmax(logits)\n",
+    "  \n",
+    "  # Sampling and validation eval: batch 1, no unrolling.\n",
+    "  sample_input = tf.placeholder(tf.float32, shape=[1, vocabulary_size])\n",
+    "  saved_sample_output = tf.Variable(tf.zeros([1, num_nodes]))\n",
+    "  saved_sample_state = tf.Variable(tf.zeros([1, num_nodes]))\n",
+    "  reset_sample_state = tf.group(\n",
+    "    saved_sample_output.assign(tf.zeros([1, num_nodes])),\n",
+    "    saved_sample_state.assign(tf.zeros([1, num_nodes])))\n",
+    "  sample_output, sample_state = lstm_cell(\n",
+    "    sample_input, saved_sample_output, saved_sample_state)\n",
+    "  with tf.control_dependencies([saved_sample_output.assign(sample_output),\n",
+    "                                saved_sample_state.assign(sample_state)]):\n",
+    "    sample_prediction = tf.nn.softmax(tf.nn.xw_plus_b(sample_output, w, b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
